_sass/_base.scss
body {
  background-color: rgb(33, 33, 33);
  padding: 0%;
  margin: 0%;
}

section{
  @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap');
  font-family: 'Raleway', sans-serif;
  text-align: center;
}

.introduction-text {
  padding: 0 10% 10% 10%;
}

.one {
  background-color: rgb(33, 33, 33);
  color: #f3f3f3;
  font-size: calc(5px + 2vw);
  font-weight: 400;
  text-align: center;
  width: 100%;
}

.two{
  background-color: #f3f3f3;
  color: rgb(33, 33, 33);
  font-size: calc(5px + 2vw);
  font-weight: 400;
  padding: 10%;
  text-align: center;
}

.three{
  background-color: rgb(33, 33, 33);
  color: #f3f3f3;
  padding: 10%;
  font-size: calc(5px + 2vw);
  font-weight: 400;
  text-align: center;
}

.fourth{
  background-color: #f3f3f3;
  color: rgb(33, 33, 33);
  padding: 10%;
  text-align: center;

}

.navigation {
  text-align: center;
  justify-content: center;

}

.responsive { 
  width: 100%;
  max-width:500px;
  height: auto;
}

#hoverme:hover {
  content: url("/images/HoverHome.png");
} 


.post-content {
  background-color: rgb(33, 33, 33);
  color: #f3f3f3;
  font-family: 'Raleway';
  font-size: larger;
  padding-top: 35px;
  padding-bottom: 35px;
  line-height: 1.5em;
}

.post-title {
  background-color: rgb(33, 33, 33);
  color: #f3f3f3;

}
  

h1{
  text-align: left;
  line-height: 1.5em;
  margin-top: -8px;
  padding-top: 0px;
  }

.blog-content {
  background-color: rgb(33, 33, 33);
  color: #f3f3f3;
  font-size: calc(5px + 2vw);
  font-weight: 400;
  padding-bottom: 10%;
  padding-left: 15%;
  padding-right: 15%;


}

.nav-anchor {
  display: inline-grid;
  font-size: x-large;
  font-family: 'Raleway';
  font-weight: 600;
  grid-template-columns: auto;
  margin: 5px;
  padding: 20px;
  text-decoration: none;
  position: relative;
  padding-bottom: 5px;
  
}

.nav-anchor:hover {
  border-bottom: 3px solid rgb(40, 40, 40);
}

.main-image-wrapper {
  max-width: 100%;
  height: auto;
}

.main-image {
  position: static;
  max-width: 100%;
  height: auto;
  
}

